# egregore-mcp

./: .gitignore  README.md  pyproject.toml  server.py  test_recall_tools.py  test_slack_files.py  test_streaming.py  test_tools.py
